tests/baselines/reference/returnValueInSetter.errors.txt
==== tests/cases/compiler/returnValueInSetter.ts (2 errors) ====
    class f {
        set x(value) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return null; // Should be an error
                   ~~~~
!!! error TS2408: Setters cannot return a value.
        }
    }
    
    